style: revamp brand identity and enhance mobile/tablet responsiveness

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -69,7 +69,7 @@
         </div>
 
         <!-- Column 2: Move History & Opening -->
-        <div id="history-col" class="col-12 col-md-6 col-lg-3">
+        <div id="history-col" class="col-12 col-md-6 col-lg-3 mt-3 mt-lg-0">
             <div class="history-container p-3 rounded-3 h-100 d-flex flex-column">
                 <div id="opening-info" class="mb-3">
                     <h6 class="text-white-50 small text-uppercase fw-bold mb-1">Khai cuộc</h6>
@@ -86,7 +86,7 @@
         </div>
 
         <!-- Column 3: Chatbot -->
-        <div id="chat-col" class="col-12 col-md-12 col-lg-4">
+        <div id="chat-col" class="col-12 col-md-12 col-lg-4 mt-3 mt-lg-0">
             <div class="chat-column-inner d-flex h-100" style="position:relative;">
                 <div id="chat-resizer" class="chat-resizer" title="Kéo để thay đổi kích thước chat">
                     <i class="bi bi-chevron-left chat-resizer-icon" aria-hidden="true"></i>
