perf: eliminate openings flickering and clean up CSS architecture

--- a/frontend/templates/game_over_modal.html
+++ b/frontend/templates/game_over_modal.html
@@ -1,6 +1,6 @@
 <div class="modal fade" id="gameOverModal" tabindex="-1" aria-labelledby="gameOverModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content text-white">
+        <div class="modal-content modal-dark">
 
             <div class="modal-header border-0">
                 <h5 class="modal-title" id="gameOverModalTitle">Ván đấu kết thúc</h5>
