--- a/frontend/templates/openings.html
+++ b/frontend/templates/openings.html
@@ -44,5 +44,6 @@
 {% endblock %}
 
 {% block scripts %}
+<script src="{{ url_for('static', filename='js/opening_data.js') }}"></script>
 <script src="{{ url_for('static', filename='js/openings.js') }}"></script>
 {% endblock %}
