--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -88,9 +88,6 @@
         <!-- Column 3: Chatbot -->
         <div id="chat-col" class="col-12 col-md-12 col-lg-4 mt-3 mt-lg-0">
             <div class="chat-column-inner d-flex h-100" style="position:relative;">
-                <div id="chat-resizer" class="chat-resizer" title="Kéo để thay đổi kích thước chat">
-                    <i class="bi bi-chevron-left chat-resizer-icon" aria-hidden="true"></i>
-                </div>
                 <div class="chatbot-container p-0 rounded-3 w-100 d-flex flex-column overflow-hidden">
                     <!-- Chat Header -->
                     <div class="chat-header d-flex align-items-center p-3">
@@ -126,6 +123,7 @@
 {% block scripts %}
 <script src="{{ url_for('static', filename='js/constants.js') }}"></script>
 <script src="{{ url_for('static', filename='js/stockfish_manager.js') }}"></script>
+<script src="{{ url_for('static', filename='js/opening_data.js') }}"></script>
 <script src="{{ url_for('static', filename='js/logic_game.js') }}"></script>
 <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 {% endblock %}
